# branch_predictor

./: CMakeLists.txt  Makefile  README  Results-14Components  Results-5Components  gen_report.pl  predictor.h
3rd_part/pystring/: CMakeLists.txt
cbp2016.final/sim/: Makefile  bt9_reader.h  main.cc  predictor.h  utils.h
cbp2016.final/sim/AndreSeznecLimited/PoTAGE/: predictor.cc
cbp2016.final/sim/AndreSeznecLimited/cbp64KB/: predictor.h
cbp2016.final/sim/AndreSeznecLimited/cbp8KB/: predictor.h
cbp2016.final/sim/AndreSeznecLimited/sonicBoom/: predictor.h
cbp2016.final/sim/AndreSeznecLimited/sonicBoom_btfn/: predictor.h
cbp2016.final/sim/reggression/: log_boom.txt  log_boom_1.txt  log_boom_2.txt  log_matchCounter.txt  log_no_loop.txt  log_reverse_matchCounter.txt  reggress.py
framework/: Results-8Components  main.cc  my_trace_reader.h
predictor/cbp201432KB/: ._predictor.h
predictor/cbp20144KB/: predictor.h
predictor/cpb2004_base_tage/: CMakeLists.txt  Makefile  predictor.cc  predictor.h
predictor/cpb2016/: CMakeLists.txt  predictor.cc  predictor.h
trace_reader/my_bt9_reader/: my_trace_reader.cpp  my_trace_reader.h
